--- a/css/stayle.css
+++ b/css/stayle.css
@@ -60,6 +60,14 @@ body {
   font-weight: 600;
 }
 
+main {
+  flex-grow: 1;
+}
+
+img {
+  display: flex;
+}
+
 .container {
   width: 100%;
   max-width: 1210;
@@ -67,4 +75,33 @@ body {
   margin-right: auto;
   padding-left: 50px;
   padding-right: 50px;
+}
+
+.btn {
+  border: 2px solid transparent;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 9px 33px 11px 32px;
+  border-radius: 24px;
+  transition: 0.3s;
+}
+
+.btn:active {
+  opacity: 0.6;
+}
+
+.btn-white {
+  color: #ffffff;
+  border-color: #ffffff;
+}
+
+.btn-white:hover {
+  border-color: #ffffff;
+  color: #002509;
+}
+
+.btn-white:active {
+  color: #002529;
+  border-color: #002529;
 }
