--- a/css/stayle.css
+++ b/css/stayle.css
@@ -97,11 +97,51 @@ img {
 }
 
 .btn-white:hover {
-  border-color: #ffffff;
+  background-color: #ffffff;
   color: #002509;
 }
 
-.btn-white:active {
+.btn-dark {
   color: #002529;
   border-color: #002529;
 }
+
+/* header start */
+.header {
+  background-color: #014e56;
+  padding-top: 73px;
+  padding-bottom: 73px;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.site-logo {
+  color: #ffffff;
+  margin-right: 80px;
+}
+.site-logo:hover {
+  opacity: 0.8;
+}
+.site-logo:active {
+  opacity: 0.6;
+}
+
+.sitenav {
+  margin-right: auto;
+}
+.sitenav-list {
+  display: flex;
+  gap: 40px;
+}
+
+.sitenav-link {
+  color: #ffffff;
+  transition: 0.3s;
+}
+.sitenav-link:hover {
+  color: #f67e7e;
+}
+
+/* header end */
