--- a/css/contact.css
+++ b/css/contact.css
@@ -37,7 +37,64 @@
   font-weight: 700;
 }
 
-.hero-form {
+.hero-form-wrapper {
   width: 100%;
   max-width: 542px;
+}
+
+.hero-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+input {
+  background-color: transparent;
+  border: 0;
+}
+
+.hero-form-control {
+  width: 100%;
+}
+.hero-form-control:last-child {
+  margin-bottom: 24px;
+}
+.hero-form-input {
+  width: 100%;
+  border-bottom: 1px solid #79c8c7;
+  color: #ffffff;
+  padding: 0 0 16px 14px;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.12px;
+  font-weight: 600;
+}
+
+.hero-form-input::placeholder {
+  opacity: 0.6;
+}
+.hero-form-texteria {
+  width: 100%;
+  background-color: transparent;
+  border: 0;
+  color: #ffffff;
+  resize: none;
+  border-bottom: 1px solid #79c8c7;
+  padding: 0 0 16px 14px;
+}
+
+.hero-form-input:focus,
+.hero-form-texteria {
+  outline: none;
+}
+
+.hero-btn {
+  cursor: pointer;
+  color: #004047;
+}
+
+.hero-btn {
+  background-color: #79c8c7;
+  color: #004047;
 }
